--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="banner">banner</div>
       <div class="main1">
         <div class="mani1_child">mani1_left</div>
-        <div class="mani1_child">mani1_left</div>
+        <div class="mani1_child">mani1_center</div>
         <div class="mani1_child">mani1_right</div>
       </div>
       <div class="main2">
